--- a/src/blocks/b-filter/b-filter.less
+++ b/src/blocks/b-filter/b-filter.less
@@ -30,6 +30,11 @@
 .b-filter__item_active {
 	background: #fbfbfc;
 
+	.b-filter__title {
+		color: @text-color !important;
+		border-bottom-color: transparent !important;
+	}
+
 	&.b-filter__item_with-arrow:after {
 		content: '';
 
