--- a/src/blocks/b-map/b-map.less
+++ b/src/blocks/b-map/b-map.less
@@ -8,3 +8,11 @@
 	margin-top: 60px;
 	margin-bottom: 75px;
 }
+
+@media (max-width: 1500px) {
+	.b-map {
+		width: auto;
+		margin-left: 0;
+		overflow: hidden;
+	}
+}
