--- a/src/blocks/b-portfolio-filter/b-portfolio-filter.less
+++ b/src/blocks/b-portfolio-filter/b-portfolio-filter.less
@@ -105,6 +105,10 @@
 }
 
 .b-portfolio-filter__item_active {
+	.b-portfolio-filter__title {
+		border-bottom-color: transparent !important;
+	}
+
 	&:before {
 		position: absolute;
 		top: 50%;
