--- a/src/blocks/b-style-filter/b-style-filter.less
+++ b/src/blocks/b-style-filter/b-style-filter.less
@@ -25,5 +25,5 @@
 
 .b-style-filter__item_active {
 	color: #2ecc71;
-	border-bottom-color: transparent;
+	border-bottom-color: transparent !important;
 }
