--- a/src/blocks/b-subscribe/b-subscribe.less
+++ b/src/blocks/b-subscribe/b-subscribe.less
@@ -39,25 +39,20 @@
 }
 
 .b-subscribe__button {
-	font-size: 24px;
 	font-weight: bold;
-	color: #fff;
-	background-color: #1abc9c;
-	padding: 12px 22px;
+	padding-left: 22px;
+	padding-right: 22px;
 	margin-left: 15px;
-
-	&:hover, &:active, &:focus, &.active {
-		color: #fff;
-		background-color: #18ad90;
-	}
 }
 
 .b-subscribe_theme_alt {
 	.b-subscribe__button {
-		background-color: #acc000;
+		background-color: #1abc9c;
+		border-color: #1abc9c;
 
 		&:hover, &:active, &:focus, &.active {
-			background-color: #9eb000;
+			background-color: #18ad90;
+			border-color: #18ad90;
 		}
 	}
 }
