--- a/src/blocks/b-summary/b-summary.less
+++ b/src/blocks/b-summary/b-summary.less
@@ -25,8 +25,11 @@
 
 .b-summary__number {
 	font-size: 50px;
+	height: 55px;
 	float: left;
 	margin-right: 6px;
+	position: relative;
+	top: -3px;
 }
 
 .b-summary__text {
