--- a/src/blocks/b-theme-filter/b-theme-filter.less
+++ b/src/blocks/b-theme-filter/b-theme-filter.less
@@ -25,5 +25,5 @@
 
 .b-theme-filter__item_active {
 	color: #e74c3c;
-	border-bottom-color: transparent;
+	border-bottom-color: transparent !important;
 }
