--- a/src/templates/blog_done.jade
+++ b/src/templates/blog_done.jade
@@ -67,6 +67,9 @@ block content
                                     span 16 марта 2015
                                 .col-xs-6.text-right
                                     span 16 марта 2015
+            .g-loader
+                .g-loader__content
+                    a.g-loader__button(href='#') #[i.g-loader__button-icon]#[span.g-loader__button-text Загрузить ещё]
             .b-subscribe-done
                 p.b-subscribe-done__title Почти готово!
                 .b-subscribe-done__text Чтобы письма не пападали в спам - подтвердите подписку.#[br]Для этого перейдите по ссылке в письме, которое мы отправили на ваш email.
