--- a/src/templates/blog_item.jade
+++ b/src/templates/blog_item.jade
@@ -98,11 +98,11 @@ block content
             .b-blog-item__comments
                 p Place for comments
 
-            .b-subscribe.b-subscribe_theme_alt
+            .b-subscribe
                 p.b-subscribe__title Получайте новые статьи прямо на почту
                 p.b-subscribe__lead Никакого спама или рекламы. Только статьи.
 
                 form.form-inline.b-subscribe__form
                     .form-group
                         input.form-control.b-subscribe__input(name='email', type='email', placeholder='Введите свой email')
-                    button.btn.b-subscribe__button(type="submit") Подписаться
+                    button.btn.btn-lg.btn-success.b-subscribe__button(type="submit") Подписаться
