--- a/src/templates/clients.jade
+++ b/src/templates/clients.jade
@@ -29,7 +29,7 @@ block content
                             .b-clients__content
                                 img.b-clients__image_default(src='assets/img/tmp/client_2_off.png')
                                 img.b-clients__image_hover(src='assets/img/tmp/client_2_on.png')
-                a.b-clients__button(href='#')
-                    i.b-clients__button-icon
-                    span.b-clients__button-text Загрузить ещё
+                .g-loader.g-loader_theme_dark
+                    .g-loader__content
+                        a.g-loader__button(href='#') #[i.g-loader__button-icon]#[span.g-loader__button-text Загрузить ещё]
 
