--- a/src/templates/includes/head.jade
+++ b/src/templates/includes/head.jade
@@ -1,7 +1,7 @@
 head
     meta(charset='utf-8')
     meta(http-equiv='X-UA-Compatible', content='IE=edge,chrome=1')
-    meta(name='viewport', content='initial-scale=1.0, width=device-width')
+    meta(name='viewport', content='width=1068')
 
     title #{title}
     meta(name="description", content="")
@@ -13,6 +13,7 @@ head
         link(rel='stylesheet', href='assets/vendor/slick-carousel/slick/slick.css')
         link(rel='stylesheet', href='assets/vendor/slick-carousel/slick/slick-theme.css')
         link(rel='stylesheet', href='assets/vendor/fancybox/source/jquery.fancybox.css?v=2.1.5', media='screen')
+        link(rel='stylesheet', href='assets/vendor/odometer/themes/odometer-theme-minimal.css')
         link(rel='stylesheet', href='assets/css/common.min.css')
 
     block scripts
@@ -22,4 +23,6 @@ head
         script(src='assets/vendor/slick-carousel/slick/slick.min.js')
         script(src='assets/vendor/fancybox/source/jquery.fancybox.pack.js?v=2.1.5')
         script(src='assets/vendor/fancybox/source/helpers/jquery.fancybox-media.js')
+        script(src='assets/vendor/odometer/odometer.min.js')
+        script(src='assets/js/emerge.js')
         script(src='assets/js/script.js')
