--- a/src/templates/offers_empty.jade
+++ b/src/templates/offers_empty.jade
@@ -35,11 +35,11 @@ block content
                     .b-offers-empty__text
                         p Но мы работаем над этим. Отбираем для наших клиентов самые интересные и выгодные бонусы.
                         p Если хотите стать нашим партнером, и разместить свой бонус — #[a(href='#') пишите].
-            .b-subscribe
+            .b-subscribe.b-subscribe_theme_alt
                 p.b-subscribe__title Получайте новые акции прямо на почту
                 p.b-subscribe__lead Никакого спама или рекламы. Только акции.
 
                 form.form-inline.b-subscribe__form
                     .form-group
                         input.form-control.b-subscribe__input(name='email', type='email', placeholder='Введите свой email')
-                    button.btn.b-subscribe__button(type="submit") Подписаться
+                    button.btn.btn-lg.btn-success.b-subscribe__button(type="submit") Подписаться
