--- a/src/templates/order_1.jade
+++ b/src/templates/order_1.jade
@@ -19,4 +19,4 @@ block content
                     .form-group
                         label Номер телефона
                         input.form-control(type="text")
-                    input.btn.btn-primary.btn-lg.b-form__button(type="submit", value="Далее")
+                    input.btn.btn-info.btn-lg.b-form__button(type="submit", value="Далее")
