--- a/src/templates/order_2.jade
+++ b/src/templates/order_2.jade
@@ -43,6 +43,6 @@ block content
                         label Предпочтительный способ оплаты
                         p.help-block Счет Альфа-банка, карта Сбербанка, Яндекс.Деньги, QIWI, WebMoney, расчетный счет ИП или PayPal?
                         input.form-control(type="text")
-                    input.btn.btn-primary.btn-lg.b-form__button(type="submit", value="Отправить заявку")
+                    input.btn.btn-info.btn-lg.b-form__button(type="submit", value="Отправить заявку")
                     br
                     a.b-form__link(href='#') Соглашение о конфиденциальности
