--- a/src/templates/portfolio_type_3.jade
+++ b/src/templates/portfolio_type_3.jade
@@ -78,7 +78,6 @@ block content
                                 p.b-portfolio__category Строительство
                                 p.b-portfolio__date 20 апреля 2016
 
-                a.b-portfolio__button(href='#')
-                    i.b-portfolio__button-icon
-                    span.b-portfolio__button-text Загрузить ещё
-
+                .g-loader
+                    .g-loader__content
+                        a.g-loader__button(href='#') #[i.g-loader__button-icon]#[span.g-loader__button-text Загрузить ещё]
