--- a/src/templates/reviews.jade
+++ b/src/templates/reviews.jade
@@ -128,12 +128,9 @@ block content
                         .b-reviews__footer
                             span.b-reviews__date 11 января 2015
                             a.b-reviews__link(href='#') Оригинал отзыва
-            .b-reviews__loader
-                a.b-reviews__button(href='#')
-                    i.b-reviews__button-icon
-                    span.b-reviews__button-text Загрузить ещё
-                        
-
+            .g-loader
+                .g-loader__content
+                    a.g-loader__button(href='#') #[i.g-loader__button-icon]#[span.g-loader__button-text Загрузить ещё]
         .hidden
             #review_1
                 .b-review-image
