--- a/src/blocks/b-treatment/b-treatment.less
+++ b/src/blocks/b-treatment/b-treatment.less
@@ -3,14 +3,25 @@
 
 .b-treatment {
 	background: #000;
+	position: relative;
+	height: 421px;
+}
+
+@media (max-width: 1500px) {
+	.b-treatment {
+		overflow: hidden;
+	}
 }
 
 .b-treatment__content {
+	position: absolute;
+	top: 0;
+	left: 50%;
+	transform: translateX(-50%);
 	width: 1500px;
 	height: 421px;
 	background: #000 center top no-repeat url("../../assets/img/splash-treatment.jpg");
 	margin: 0 auto;
-	position: relative;
 	color: #fff;
 	box-shadow: inset 0 -10px 145px #000;
 
