--- a/src/templates/client.jade
+++ b/src/templates/client.jade
@@ -53,5 +53,7 @@ block content
                                 p.b-portfolio__category Строительство
                                 p.b-portfolio__date 20 апреля 2016
 
-                a.b-portfolio__button(href='#'): span.b-portfolio__button-text Загрузить ещё
+                .g-loader
+                    .g-loader__content
+                        a.g-loader__button(href='#') #[i.g-loader__button-icon]#[span.g-loader__button-text Загрузить ещё]
 
